--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content"width=device-width,initial-scale=1">
-        <script src="/js/main.js"></script>
-        <link href="/css/main.css" rel="stylesheet">
+        <script src="js/main.js"></script>
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <div id="education">
