Use FAC-Website for GitHub Page

--- a/index.html
+++ b/index.html
@@ -2,20 +2,72 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content"width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
         <title>Sean Paul Jacke</title>
-        <script src="js/main.js"></script>
-        <link href="css/main.css" rel="stylesheet">
+        <style>
+            body {
+                font-family: "Open Sans", sans-serif;
+                font-optical-sizing: auto;
+                font-weight: 300;
+                font-size: medium;
+                font-variation-settings: "wdth" 100;
+            }
+
+            @media only screen and (min-width: 768px) {
+                body {
+                    margin-left: 20%;
+                    margin-right: 20%;
+                }
+            }
+        </style>
     </head>
     <body>
-        <div id="education">
-            <h2>Education</h2>
-        </div>
-        <div id="experience">
-            <h2>Experience</h2>
-        </div>
-        <div id="skills">
-            <h2>Skills</h2>
-        </div>
+        <p>
+            <strong>Hi Founders &amp; Coders &#x1F44B;, I'm Sean.</strong>
+        </p>
+        <p>
+            I hope you'll accept me into your foundation programme.
+            I already have a fair bit of experience with software development.
+            But about 8 years ago, I put my career aside to take care of my kids.
+        </p>
+        <p>
+            Now that they're older, I'm ready to resume that journey.
+            But my skills are rusty, and I could use some help getting back up to speed. 
+            And I would love to be of service to others starting out on this path.
+        </p>
+        <p>
+            My last job was as a frontend web developer for an edtech startup called
+            <a href="https://learnship.com" target="_blank">Learnship</a>.
+            I worked there for 7 years.
+            When I started, the company had 12 employees and only a handful of customers.
+            By the time I left, we had offices in 5 countries across 3 continents.
+            150 staff members supported a network of more than 1000 freelance teachers.
+            Revenues had climbed to the tens of millions of Euro.
+        </p>
+        <p>
+            Programming wasn't the only thing I did at Learnship.
+            Initially, I taught classes and designed lessons.
+            As the company grew and added staff, I headed up material development.
+            From there I moved on to writing code.
+        </p>
+        <p>
+            That trajectory reflected my versatility as well as background.
+            Before moving to software development, I'd been an educator.
+            I love learning, and I love designing and making things.
+            In addition to working with bits and bytes, crafting physical objects is a central part of my life.
+            In the work that I do, I'm guided by an ethos of service, empowerment and equity.
+        </p>
+        <p>
+            I'm grateful for the chance I've had to center the lives of my children over the last 8 years.
+            Now I look forward to returning to full-time work and widening my contributions.
+            Since the first meetup, I've been thrilled to encounter the joyful spirit of Founders & Coders.
+        </p>
+        <p>
+            I would appreciate a chance to speak more about my experience.
+            And I would be honored if accepted into the upcoming cohort.
+        </p>
     </body>
 </html>
