Changed background color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <title>Sean Paul Jacke</title>
         <style>
             body {
+                background-color: #1b3e10;
+                color: #de5c1d;
                 font-family: "Open Sans", sans-serif;
                 font-optical-sizing: auto;
                 font-weight: 300;
@@ -30,7 +32,7 @@
         </p>
         <p>
             I hope you'll accept me into your foundation programme.
-            I already have a fair bit of experience with software development.
+            I've already done a fair bit of software development.
             But about 8 years ago, I put my career aside to take care of my kids.
         </p>
         <p>
